add is admin flag to whoami endpoint
